<resources>
    <string name="app_name">Timeco</string>

    <!-- Login -->
    <string name="tv_Title">TIMECO</string>
    <string name="tv_username">Usuario</string>
    <string name="tv_password">Contraseña</string>
    <string name="btn_button">ENTRAR</string>

    <!-- Home -->
    <string name="tv_inicio">INICIO DE LA JORNADA</string>
    <string name="number">00</string>
    <string name="points">:</string>
    <string name="tv_fin">FINAL DE LA JORNADA</string>
    <string name="tv_pausa">DESCANSO (OPCIONAL)</string>
    <string name="button_reg">ACEPTAR</string>

    <!-- Nav Home -->
    <string name="btn_Worklogs">REGISTROS</string>
    <string name="btn_staff">PERSONAL</string>
    <string name="btn_options">OPCIONES</string>

    <!-- Work Logs -->
    <string name="txtNameSearch">Nombre Empleado</string>
    <string name="txtDateInit">Fecha inicio</string>
    <string name="txtDateEnd">Fecha fin</string>
    <string name="btnSearch">BUSCAR</string>
    <string name="btnBack">ATRAS</string>

    <!-- Staff Management -->
    <string name="txt_Staff_Name">Nombre</string>
    <string name="txt_Staff_Surname">Apellidos</string>
    <string name="txt_Staff_Username">Usuario</string>
    <string name="txt_Staff_Password">Contraseña</string>
    <string name="txt_Staff_Position">Cargo</string>
    <string name="btn_editCancel">Editar</string>
    <string name="btn_confirmDelete">Confirmar</string>

    <!-- Options -->
    <string name="tv_nombre">NOMBRE DE LA EMPRESA</string>
    <string name="etxt_nombre">Escriba un nombre</string>
    <string name="tv_logo">IMAGEN DE LA EMPRESA</string>
    <string name="img_login">img_login</string>


    <!-- Download Web -->
    <string name="tv_title">CARGAR UNA WEB</string>
    <string name="button_cargar">CARGAR</string>

    <!-- Spinner -->

    <string-array name="departamentos_array">
        <item>Comercial</item>
        <item>Administración</item>
        <item>RRHH</item>
        <item>Técnicos</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
