<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.StaffFragment">

    <Spinner
        android:id="@+id/modeSelect"
        android:layout_width="181dp"
        android:layout_height="24dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="360dp"
        android:layout_height="426dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeSelect"
        app:layout_constraintVertical_bias="0.127">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_Staff_Name"
                android:layout_width="321dp"
                android:layout_height="42dp"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/txt_Staff_Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_Staff_Surname"
                android:layout_width="321dp"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txt_Staff_Surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_Staff_Username"
                android:layout_width="321dp"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txt_Staff_Username"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_Staff_Surname" />

            <Spinner
                android:id="@+id/roleSelect"
                android:layout_width="321dp"
                android:layout_height="42dp"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/txt_Staff_Position"
                android:layout_width="321dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/txt_Staff_Position"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_editCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_editCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_confirmDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_confirmDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_editCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>