<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bkg_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/london2"
    tools:context=".View.HomeFragment">

    <TextView
        android:id="@+id/tv_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_inicio"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textColor="@android:color/background_dark"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_inicio"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etxt_start_h"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_start"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_inicio"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/etxt_start_m"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/tv_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_inicio"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/tv_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fin"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/tv_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textColor="@android:color/background_dark"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etxt_end_h"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_end"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fin"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/etxt_end_m"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/tv_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_fin"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/tv_pausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pausa"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/tv_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pausa"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etxt_pause_h"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_pause"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pausa"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/etxt_pause_m"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/tv_pause"
        app:layout_constraintTop_toBottomOf="@+id/tv_pausa"
        app:layout_constraintVertical_bias="0.08" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_editCancel"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_home"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_editCancel"
            android:layout_width="79dp"
            android:layout_height="49dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:background="@drawable/ic_aceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/btn_confirmDelete"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_info"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/btn_editCancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>